project(ImageLib LANGUAGES CXX)

add_library(ImageLib STATIC
    ImageLib.cpp
    jpeg/jcapimin.c 
    jpeg/jcapistd.c
    jpeg/jccoefct.c 
    jpeg/jccolor.c 
    jpeg/jcdctmgr.c 
    jpeg/jchuff.c
    jpeg/jcinit.c 
    jpeg/jcmainct.c 
    jpeg/jcmarker.c 
    jpeg/jcmaster.c 
    jpeg/jcomapi.c 
    jpeg/jcparam.c
    jpeg/jcphuff.c 
    jpeg/jcprepct.c 
    jpeg/jcsample.c
    jpeg/jctrans.c 
    jpeg/jdapimin.c 
    jpeg/jdapistd.c
    jpeg/jdatadst.c 
    jpeg/jdatasrc.c 
    jpeg/jdcoefct.c 
    jpeg/jdcolor.c 
    jpeg/jddctmgr.c 
    jpeg/jdhuff.c
    jpeg/jdinput.c 
    jpeg/jdmainct.c 
    jpeg/jdmarker.c 
    jpeg/jdmaster.c 
    jpeg/jdmerge.c 
    jpeg/jdphuff.c
    jpeg/jdpostct.c 
    jpeg/jdsample.c 
    jpeg/jdtrans.c 
    jpeg/jerror.c 
    jpeg/jfdctflt.c 
    jpeg/jfdctfst.c
    jpeg/jfdctint.c 
    jpeg/jidctflt.c 
    jpeg/jidctfst.c 
    jpeg/jidctint.c 
    jpeg/jidctred.c 
    jpeg/jquant1.c
    jpeg/jquant2.c 
    jpeg/jutils.c 
    jpeg/jmemmgr.c
    jpeg/jmemansi.c
    png/example.c
    png/png.c
    png/pngerror.c
    png/pngget.c
    png/pngmem.c
    png/pngpread.c
    png/pngread.c
    png/pngrio.c
    png/pngrtran.c
    png/pngrutil.c
    png/pngset.c
    png/pngtrans.c
    png/pngvcrd.c
    png/pngwio.c
    png/pngwrite.c
    png/pngwtran.c
    png/pngwutil.c
    zlib/adler32.c
    zlib/compress.c
    zlib/crc32.c
    zlib/deflate.c
    zlib/gzio.c
    zlib/infblock.c
    zlib/infcodes.c
    zlib/inffast.c
    zlib/inflate.c
    zlib/inftrees.c
    zlib/infutil.c
    zlib/trees.c
    zlib/uncompr.c
    zlib/zutil.c
)